syntax = "proto3";

package permission.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 权限点管理服务
service PermissionService {
  // 查询权限点列表
  rpc List (pagination.PagingRequest) returns (ListPermissionResponse) {}

  // 查询权限点详情
  rpc Get (GetPermissionRequest) returns (Permission) {}

  // 创建权限点
  rpc Create (CreatePermissionRequest) returns (google.protobuf.Empty) {}

  // 更新权限点
  rpc Update (UpdatePermissionRequest) returns (google.protobuf.Empty) {}

  // 删除权限点
  rpc Delete (DeletePermissionRequest) returns (google.protobuf.Empty) {}

  // 同步API资源
  rpc SyncApiResources (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // 同步菜单资源
  rpc SyncMenus (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

// 数据权限范围
enum DataScope {
  DATA_SCOPE_UNSPECIFIED = 0;

  ALL = 1;              // 全部数据：可跨租户或租户内所有 Unit (取决于 tenant_id)
  SELF = 2;             // 仅限本人：只能看到 owner_id 等于自己的数据

  UNIT_ONLY = 3;        // 仅限当前所属 OrgUnit：不含子节点
  UNIT_AND_CHILD = 4;   // 当前所属 OrgUnit 及所有递归子节点

  SELECTED_UNITS = 5;   // 自定义组织单元列表
}

// 权限点 - API 关联关系
message PermissionApiResource {
  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "ID" }
  ]; // ID

  optional uint32 permission_id = 2 [
    json_name = "permissionId",
    (gnostic.openapi.v3.property) = { description: "权限点ID" }
  ]; // 权限点ID

  optional uint32 api_id = 3 [
    json_name = "apiId",
    (gnostic.openapi.v3.property) = { description: "API ID" }
  ]; // API ID
}

// 权限点 - 菜单 关联关系
message PermissionMenu {
  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "ID" }
  ]; // ID

  optional uint32 permission_id = 2 [
    json_name = "permissionId",
    (gnostic.openapi.v3.property) = { description: "权限点ID" }
  ]; // 权限点ID

  optional uint32 menu_id = 3 [
    json_name = "menuId",
    (gnostic.openapi.v3.property) = { description: "菜单ID" }
  ]; // 菜单ID
}

// 权限点
message Permission {
  // 权限点状态
  enum Status {
    OFF = 0;         // 禁用
    ON = 1;          // 启用
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "权限点ID" }
  ]; // 权限点ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = { description: "权限点名称（如：删除用户）" }
  ]; // 权限点名称（如：删除用户）

  optional string code = 3 [
    json_name = "code",
    (gnostic.openapi.v3.property) = { description: "权限点唯一编码（如：user.delete）" }
  ]; // 权限点唯一编码（如：user.delete）

  optional string remark = 4 [
    json_name = "remark",
    (gnostic.openapi.v3.property) = { description: "备注" }
  ]; // 备注

  optional Status status = 5 [(gnostic.openapi.v3.property) = {description: "状态"}]; // 状态

  optional uint32 tenant_id = 6 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ];  // 租户ID

  optional uint32 group_id = 7 [
    json_name = "groupId",
    (gnostic.openapi.v3.property) = {description: "分组ID"}
  ];  // 分组ID

  optional string group_name = 8 [
    json_name = "groupName",
    (gnostic.openapi.v3.property) = {description: "分组名称"}
  ];  // 分组名称

  repeated uint32 menu_ids = 10 [
    json_name = "menuIds",
    (gnostic.openapi.v3.property) = {description: "关联的菜单ID"}
  ]; // 关联的菜单ID

  repeated uint32 api_resource_ids = 11 [
    json_name = "apiResourceIds",
    (gnostic.openapi.v3.property) = {description: "关联的API资源ID"}
  ]; // 关联的API资源ID

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者ID"}]; // 创建者ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者ID"}]; // 更新者ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 查询列表 - 回应
message ListPermissionResponse {
  repeated Permission items = 1;
  uint64 total = 2;
}

// 查询 - 请求
message GetPermissionRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    string code = 2 [
      (gnostic.openapi.v3.property) = {description: "权限点编码", read_only: true},
      json_name = "code"
    ]; // 权限点编码
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建 - 请求
message CreatePermissionRequest {
  Permission data = 1;
}

// 更新 - 请求
message UpdatePermissionRequest {
  uint32 id = 1;

  Permission data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除 - 请求
message DeletePermissionRequest {
  uint32 id = 1;
}
